--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="text-center">
                     <h3 class="text-2xl font-semibold text-gray-300 mb-6">LATEST ON TIKTOK</h3>
                     <div class="max-w-lg mx-auto bg-gray-800/50 p-1 rounded-xl">
-                         <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@doodle_.studio" data-unique-id="doodlestudio" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@doodle_.studio?refer=creator_embed">@doodlestudio</a> </section> </blockquote>
+                         <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@doodle_.studio" data-unique-id="doodle_.studio" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@doodle_.studio?refer=creator_embed">@doodle_.studio</a> </section> </blockquote>
                     </div>
                 </div>
             </div>
