--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
                 <div class="text-center">
                     <h3 class="text-2xl font-semibold text-gray-300 mb-6">LATEST ON INSTAGRAM</h3>
                     <div class="max-w-lg mx-auto p-2 bg-gray-800/50 rounded-xl">
-                        <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/98b6b7bb216c50db93ab9ab0b5a8b8dc.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-                    </div>
+                        <!-- Elfsight Instagram Feed | Untitled Instagram Feed -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-aeb94d40-ff7f-48f9-9a8c-d670549188e7" data-elfsight-app-lazy></div>
+                                            </div>
                      <a href="https://www.instagram.com/doodle_contents/" target="_blank" rel="noopener noreferrer" class="mt-4 inline-block px-8 py-2 bg-pink-600 text-white font-semibold rounded-lg hover:bg-pink-500 transition-colors duration-300">
                         Follow on Instagram
                     </a>
@@ -324,6 +326,12 @@
                 <a href="https://www.instagram.com/doodle_contents/" target="_blank" rel="noopener noreferrer" class="hover:text-pink-500 transition duration-300">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                          <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.85-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.85 0-3.204.012-3.584.07-4.85.148-3.227 1.66-4.771 4.919-4.919 1.266-.057 1.645-.069 4.85-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.441 1.441 1.441 1.441-.645 1.441-1.441-.645-1.44-1.441-1.44z" />
+                    </svg>
+                </a>
+                <!-- TikTok Link -->
+                <a href="https://www.tiktok.com/@doodle_.studio" target="_blank" rel="noopener noreferrer" class="hover:text-white transition duration-300">
+                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                        <path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-2.43.05-4.85-.98-6.42-2.98-1.7-2.14-2.08-4.78-1.1-7.18.91-2.29 2.99-3.82 5.27-4.29.19-.04.38-.06.58-.06.63 0 1.25.1 1.84.31.14.05.28.09.42.15.22.09.43.2.64.31.02-1.83.01-3.66.01-5.49-.01-1.29-.39-2.58-1.15-3.66-1.22-1.73-3.26-2.66-5.32-2.5-1.12.08-2.24.4-3.26.93v-4.2c1.19-.36 2.44-.57 3.68-.62.33-.01.66-.02 1-.02 1.31-.02 2.61-.01 3.91-.02z"/>
                     </svg>
                 </a>
             </div>
